# RAY

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/camera/: camera.h
src/material/: material.h
src/objects/: sphere.h
src/utils/: colors.h  hitable.h  hitable_list.h  my_print.h  output_file.cpp  output_file.h  ray.h  vec3.h
